--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="image-placeholder"></div>
         </div>
         <div class="col-6">
-          <img src="assets/9oclock.png" class="clock-image" alt="clock-image">
+          <img src="assets/6oclock.svg" class="clock-image" alt="clock-image">
           <p class="support-text">We find ways to create conversations around great products and companies.</p>
         </div>
       </div>
@@ -105,7 +105,7 @@
           <img src="assets/expression-img3.png" class="expression__image3 image-left" alt="expression-image3">
         </div>
         <div class="col-6">
-          <img src="assets/9oclock.png" class="clock-image" alt="clock-image">
+          <img src="assets/3oclock.svg" class="clock-image" alt="clock-image">
           <p class="support-text">We make design and creative content that inspires people, from digital to analogue.</p>
           <img src="assets/expression-img2.png" class="expression__image2 image-right" alt="expression-image2">
         </div>
@@ -119,7 +119,7 @@
 
       <div class="row">
         <div class="col-6">
-          <img src="assets/9oclock.png" class="clock-image" alt="clock-image">
+          <img src="assets/12oclock.svg" class="clock-image" alt="clock-image">
           <p class="support-text">Our projects have been featured on</p>
           <div class="logos-container">
             <img src="assets/logos/01.png" alt="logo1">
@@ -161,7 +161,7 @@
     <section class="brand-mobile">
       <h1 class="title-mobile" data-aos="fade-up" data-aos-duration="1000">BRAND<br>INTELLIGENCE</h1>
       <div id="brand-text" class="support-text-mobile">
-        <img src="assets/3oclock.svg" alt="clock">
+        <img src="assets/6oclock.svg" alt="clock">
         <p>We use empathy as a tool to discover what’s really important to people.</p>
       </div>
       <div class="brand-images-container">
@@ -174,7 +174,7 @@
   <section class="expression-mobile">
     <h1 class="title-mobile" data-aos="fade-up" data-aos-duration="1000">CREATIVE<br>EXPRESSION</h1>
     <div id="expression-text" class="support-text-mobile">
-      <img src="assets/3oclock.svg" alt="clock">
+      <img src="assets/9oclock.svg" alt="clock">
       <p>We make design and creative content that inspires people, from digital to analogue.</p>
     </div>
     <div class="expression-images-container">
