--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="styles.css">
     <title>Mediodía</title>
+
+    <!-- Scroll Magic Animations
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenLite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
+    <script src="js/debug.addIndicators.min.js"></script> -->
 
     <!-- Scroll Magic Animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenLite.min.js"></script>
@@ -68,15 +76,17 @@
             <p>SCROLL DOWN</p>
         </div>
 
+
     </header>
+
 
 <div class="core-desktop">
 
   <section id="strategy" class="strategy">
 
-      <div class="row">
+      <div class="row gap-row">
         <div class="col-6 strategy-left">
-          <h1 class="section-title" data-aos="fade-up" data-aos-duration="1000">CREATIVE<br>STRATEGY</h1>
+          <h1 id="strategy-title" class="section-title">CREATIVE<br>STRATEGY</h1>
           <img src="assets/placeholder-images/01.jpg" id="strategy-desk-img1" class="image-placeholder" alt="Image1">
         </div>
         <div class="col-6">
@@ -87,17 +97,17 @@
 
     </section>
 
-
+ 
     <section class="brand">
 
-      <div class="row">
+      <div class="row gap-row">
         <div class="col-6 brand-left">
           <img src="assets/9oclock.png"  id="brand-clock" class="clock-image" alt="clock-image">
           <p class="support-text">We use empathy as a tool to discover what’s really important to people.</p>
           <img id="brand-desk-img2" src="assets/brand-img2.png" class="brand__image2 image-left" alt="brand-image2">
         </div>
         <div class="col-6 brand-rigth">
-          <h1 class="section-title" data-aos="fade-up" data-aos-duration="1000">BRAND<br>INTELLIGENCE</h1>
+          <h1 class="section-title">BRAND<br>INTELLIGENCE</h1>
           <img id="brand-desk-img1" src="assets/brand-img1.png" class="brand__image1" alt="brand-image1">
           <img id="brand-desk-img3" src="assets/brand-img3.png" class="brand__image3 image-right" alt="brand-image3">
         </div>
@@ -108,9 +118,9 @@
 
     <section class="expression">
 
-      <div class="row">
+      <div class="row gap-row">
         <div class="col-6 expression-left">
-          <h1 class="section-title" data-aos="fade-up" data-aos-duration="1000">CREATIVE<br>EXPRESSION</h1>
+          <h1 class="section-title">CREATIVE<br>EXPRESSION</h1>
           <img id="expression-desk-img1" src="assets/expression-img1.png" class="expression__image1 image-left" alt="expression-image1">
           <img id="expression-desk-img3" src="assets/expression-img3.png" class="expression__image3 image-left" alt="expression-image3">
         </div>
@@ -127,11 +137,11 @@
 
     <section class="dialogue">
 
-      <div class="row">
-        <div class="col-6">
-          <img src="assets/12oclock.png" id="dialogue-clock" class="clock-image" alt="clock-image">
-          <p class="support-text">Our projects have been featured on</p>
-          <div class="logos-container">
+      <div class="row gap-row">
+        <div class="col-6 dialogue-left">
+          <div id="logos-container" class="logos-container">
+            <img src="assets/12oclock.png" id="dialogue-clock" class="clock-image" alt="clock-image">
+            <p class="support-text">Our projects have been featured on</p>
             <img src="assets/logos/01.png" alt="logo1">
             <img src="assets/logos/02.png" alt="logo2">
             <img src="assets/logos/03.png" alt="logo3">
@@ -143,7 +153,7 @@
           </div>
         </div>
         <div class="col-6 dialogue-rigth">
-          <h1 class="section-title" data-aos="fade-up" data-aos-duration="1000">SPARK<br>DIALOGUE</h1>
+          <h1 class="section-title">SPARK<br>DIALOGUE</h1>
           <img id="dialogue-desk-img1" src="assets/placeholder-images/03.jpg" class="dialogue__image1" alt="dialogue-image1">
           <img id="dialogue-desk-img2" src="assets/dialogue-image2.png" class="dialogue__image2 image-right" alt="dialogue-image2">
         </div>
@@ -226,11 +236,11 @@
 
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
               Estrategia
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#main-accordion">
+          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#main-accordion">
             <div class="accordion-body">
               <!-- CONTENIDO DE VISION -->
 
